# news-hermes

./: LICENSE  README.md  pyproject.toml
news_hermes/: __init__.py  clients.py  config.py  feeds.py  json_types.py  models.py  plugin.py  plugin.yaml  schemas.py  sources.py  storage.py  tools.py  watermark.py
tests/: test_clients.py  test_config.py  test_contract.py  test_feeds.py  test_github_releases.py  test_pull_limits.py  test_source_logging.py  test_storage.py  test_tools.py
