[project]
name = "news-hermes"
version = "0.1.0"
description = "Hermes plugin for JSON-backed tech news tracking with local triage."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "news-hermes contributors" },
]
keywords = ["agent", "hermes", "news", "plugin", "rss"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "feedparser>=6.0.11",
  "PyYAML>=6.0.2",
]

[project.urls]
Homepage = "https://github.com/imadal1n/news-hermes"
Issues = "https://github.com/imadal1n/news-hermes/issues"
Source = "https://github.com/imadal1n/news-hermes"

[dependency-groups]
dev = [
  "basedpyright>=1.35.0",
  "pytest>=9.0.0",
  "ruff>=0.14.0",
  "types-PyYAML>=6.0.12.20250915",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["news_hermes"]

[tool.hatch.build.targets.wheel.force-include]
"news_hermes/plugin.yaml" = "news_hermes/plugin.yaml"
"news_hermes/py.typed" = "news_hermes/py.typed"

[tool.hatch.build.targets.sdist]
include = [
  "/LICENSE",
  "/README.md",
  "/pyproject.toml",
  "/tests",
  "/news_hermes",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D", "PLR2004", "SLF001"]

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.11"
include = ["news_hermes", "tests"]
reportAny = false
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
